--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,6 +118,10 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground tracking-wide;
+    overflow-y: scroll;
+  }
+  html {
+    scrollbar-gutter: stable;
   }
 }
